# quiz-bot

./: .env(example)  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
bots/: check_answer.py  constants.py  settings.py  telegram_bot.py  upload_quiz.py  vkontakte_bot.py
bots/redis_integration/: __init__.py  settings.py  upload_questions.py  upload_quiz.py
quiz_tasks/: asker95.txt  cel07-1.txt  dendur17.txt  ekatch08.txt
